<resources>
    <string name="app_name">Learn English</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="english">English:</string>
    <string name="vietnamese">Vietnamese:</string>
    <string name="spelling">Spelling:</string>
    <string name="example">Example:</string>
    <string name="exampleTranslation">Example Translation:</string>
    <string name="topic">Topic:</string>
    <string name="add">Add</string>
    <string name="select_the_meaning_of_the_highlighted_word">Select the meaning of the highlighted word.</string>
    <string name="fill_in_the_missing_letters_to_match_the_meaning_below">Fill in the missing letters to match the meaning below.</string>
    <string name="text_here">Text Here</string>
    <string name="next">Next</string>
    <string name="i_don_t_remember_this_word">I don\'t remember this word!</string>
    <string name="view_detail_result">View detail result</string>
    <string name="back_to_practice">Back to Practice</string>
    <string name="saved">Saved</string>
    <string name="result">Result:</string>
    <string name="your_answer">Your answer:</string>
    <string name="image_result">Image result</string>
    <string name="you_don_t_have_any_vocabulary_on_this_topic">You don\'t have any vocabulary on this topic.</string>
    <string name="title_practice">Practice</string>
    <string name="title_detail_result">Detail Result</string>
    <string name="title_add_new_word">Add a new vocabulary</string>
    <string name="title_result">Result</string>
    <string name="title_listening">Listening</string>
    <string name="enter_the_english_text_here">Enter the English text here</string>
    <string name="enter_the_english_example_here">Enter the English example here</string>
    <string name="enter_the_meaning_here">Enter the meaning here</string>
    <string name="enter_the_pronunciation_here">Enter the pronunciation here</string>
    <string name="enter_the_translate_example_here">Enter the Vietnamese example here</string>
    <string name="image_emotion">Image Emotion</string>
    <string name="button_add_new_word">Button add new word</string>
    <string name="save_button_image">Save button image</string>
    <string name="topic_image">Topic image</string>
    <string name="settings">Settings</string>
    <string name="hour">Hour:</string>
    <string name="minute">Minute:</string>
    <string name="choose_the_time_you_want_to_remind_to_review">Choose the time you want to remind to review</string>
    <string name="fill_in_the_vocabulary_you_hear">Fill in the vocabulary you hear</string>
    <string name="speaker_button">Speaker Button</string>
    <string name="hint_button_image">Hint button image</string>
    <string name="text_button_back_listen">Back to Listening</string>
    <string name="dark_mode">Dark mode:</string>
    <string name="select_the_meaning_of_the_listened_word">Select the meaning of the listened word.</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="notification">Notification:</string>
    <string name="language_translator">Language Translator</string>
    <string name="source_text">Source Text</string>
    <string name="or">OR</string>
    <string name="translate">Translate</string>
    <string name="say_something">Say something</string>
</resources>