<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/space_15dp"
    app:cardBackgroundColor="@color/white"
    android:layout_marginHorizontal="@dimen/space_15dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="@dimen/space_15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/text"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/linearHour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/hour"
                    android:textColor="@color/black" />

                <NumberPicker
                    android:id="@+id/numberPickerHour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearMinute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/minute"
                    android:textColor="@color/black" />

                <NumberPicker
                    android:id="@+id/numberPickerMinute"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonSet"
                android:text="@string/apply"
                android:layout_marginEnd="@dimen/space_10dp"
                android:textAllCaps="false"
                android:textColor="@color/text"
                android:layout_marginTop="@dimen/space_15dp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonCancel"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/text"
                android:layout_marginStart="@dimen/space_10dp"
                android:layout_marginTop="@dimen/space_15dp"
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>


        
    </LinearLayout>

</androidx.cardview.widget.CardView>