<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/space_15dp"
    tools:context=".ui.fragments.ListenAndWriteFragment">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fill_in_the_vocabulary_you_hear"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_2dp"
        android:layout_marginTop="@dimen/space_10dp"
        android:background="#000000"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

    <Button
        android:id="@+id/speakerButton"
        android:layout_width="@dimen/space_100dp"
        android:layout_height="@dimen/space_100dp"
        android:background="@drawable/round_button_background"
        android:drawableTop="@drawable/ic_speaker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/space_15dp"
        android:contentDescription="@string/speaker_button" />

    <TextView
        android:id="@+id/textViewSuggestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/linearMain"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="@dimen/space_15dp"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/linearMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="text|sentence|paragraph"
            android:background="@drawable/border_edittext"
            android:hint="@string/text_here"
            android:inputType="text"
            android:padding="@dimen/space_15dp"
            android:textColor="@color/text"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/space_15dp"
        app:layout_constraintTop_toBottomOf="@+id/linearMain"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/imageHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/hint_button_image"
            android:src="@drawable/ic_hint"
            tools:ignore="RedundantDescriptionCheck" />

        <TextView
            android:id="@+id/textViewHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:visibility="invisible"
            android:layout_marginStart="@dimen/space_15dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>